# mongopy

./: .pre-commit-config.yaml  LICENSE.txt  README.md  dev-requirements.txt  mongo-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_mongopy.py
.github/workflows/: pylint.yml  python-package.yml
git/hooks/: pre-push
src/: mongo.py
src/mongo/: __init__.py  mongo.py
src/mongopy/: __init__.py  mongo.py
