[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongo"
version = "0.0.1"
description = "Simple Package to manage operations with MongoDB Database"
readme = "README.md"
authors = [{ name = "Sagar Motghare", email = "sagarmotghare@proton.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mongo", "pymongo"]
dependencies = ["pymongo", "pandas", "certifi"]
requires-python = ">=3.7"

[project.optional-dependencies]
build = ["build", "twine"]  
dev = []

# [project.scripts]
# realpython = "reader.__main__:main"

[project.urls]
repository = "https://github.com/sagarmotghare/mongo"
# documentation = "https://realpython.com/pypi-publish-python-package/"


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/mongo/__init__.py" = ["{version}"]

[tool.isort]
# profile = "black"
# import_heading_stdlib = "Standard library imports"
# import_heading_thirdparty = "Third party imports"
# import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
# module = "feedparser"
# ignore_missing_imports = true