[build-system]
requires = ["setuptools>=61.0.0", "wheel", "isort"]
build-backend = "setuptools.build_meta"

[project]
name = "mongopy"
version = "0.0.2"
description = "Simple Package to manage operations with MongoDB Database"
readme = "README.md"
authors = [{ name = "Sagar Motghare", email = "sagarmotghare@proton.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mongopy", "pymongo", "mongo"]
dependencies = ["pymongo", "pandas", "certifi"]
requires-python = ">=3.7"

[project.optional-dependencies]
build = ["build", "pymongo", "certifi", "pandas"]
dev = ["pymongo", "certifi", "pandas", "pytest", "python-dotenv", "pre-commit", "black", "flake8", "isort"]

[project.urls]
repository = "https://github.com/sagarmotghare/mongopy"
# documentation = "https://realpython.com/pypi-publish-python-package/"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"